--- a/TestBootstrap/Views/Shared/_Layout.cshtml
+++ b/TestBootstrap/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>_Layout</title>
     
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/scripts/lib")
 </head>
     <body>
         <header></header>
@@ -15,7 +16,5 @@
         </div>
 
         <footer></footer>
-        @Scripts.Render("~/scripts/jquery")
-        @Scripts.Render("~/scripts/bootstrap")
     </body>
 </html>
