Unused class cleanup - js

--- a/TestBootstrap/Views/Main/Index.cshtml
+++ b/TestBootstrap/Views/Main/Index.cshtml
@@ -1157,7 +1157,7 @@
             e.preventDefault();
         });
 
-        $('. [data-toggle="popover"]').popover();
-        $('. [data-toggle="tooltip"]').tooltip();
+        $('[data-toggle="popover"]').popover();
+        $('[data-toggle="tooltip"]').tooltip();
     });
 </script>
